--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Disease Detection</title>
+    <title>Klasifikasi Daun Tanaman Sehat & Tidak Sehat</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
     <style>
@@ -12,6 +15,12 @@
             height: 40px;
             border-radius: 50%;
             object-fit: cover;
+        }
+        
+        body{
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                font-style: normal;
         }
 
         .profile-text {
@@ -23,7 +32,7 @@
 <body class="bg-[#f5f5fa]">
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Plant Diesease Detection CNN</a>
+            <a class="navbar-brand" href="#">Klasifikasi Citra Daun</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,23 +43,43 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-5 items-center justitfy-scenter text-center height-full">
-        <div class="tittle contaioner mb-5">
-            <h1>Plant Disease Detection</h1>
-            <h5>Upload an image to Predict</h5>
-        </div>
-        <form action="/upload" method="post" enctype="multipart/form-data" class="mt-3">
-            <div class="mb-3">
-                <input type="file" name="file" class="form-control">
+    <div class="container mt-5 items-center justitfy-center text-center height-full">
+        <div class="card shadow-sm">
+            <div class="container p-5">
+                <h1>Klasifikasi Daun Tanaman <br>Sehat & Tidak Sehat</h1>
+                <h5 class="text-secondary"><br>Upload gambar untuk dideteksi</h5>
+                <form action="/upload" method="post" enctype="multipart/form-data" class="mt-3">
+                    <div class="mb-3">
+                        <input type="file" name="file" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Deteksi</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Prediksi</button>
-        </form>
-    </div>
-    <!-- <footer>
-        <div class="footer text-center items-center">
-            &copy; Muhammad Ghozy
         </div>
-    </footer> -->
+    </div>
+    <div class="container justify-center text-center mt-5">
+        <div class="card p-5">
+            <h2>Informasi Model</h2>
+            <div class="container text-center mt-5">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <img src="../static/images/training & validation (accuracy-lost).png" width="750px" alt="">
+                        <p class="mt-2">Training & Validation</p>
+                    </div>
+                    <div class="row flex align-items-end">
+                        <div class="col-6 mt-5">
+                            <img src="../static/images/confussionmatrix.png" width="500px" alt="">
+                            <p class="mt-2">Confussion Matrix</p>
+                        </div>
+                        <div class="col-6 mt-5">
+                            <img src="../static/images/classification report.png" width="500px" alt="">
+                            <p class="mt-2">Classification report</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
