--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PredictionResult</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         .profile-pic {
@@ -12,6 +13,12 @@
             border-radius: 50%;
             object-fit: cover;
         }
+
+        body{
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+    }
 
         .profile-text {
             padding: 10px;
@@ -29,7 +36,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Plant Diesease Detection CNN</a>
+            <a class="navbar-brand" href="#">Klasifikasi Citra Daun</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,7 +61,7 @@
                 <div class="col-md-6 justitfy-center align-items-center">
                         <div class="card-body">
                             <h5 class="card-title pb-3">Hasil Prediksi</h5>
-                            <h6>Predeksi Daun:
+                            <h6>Prediksi Daun:
                                 <br>{{ prediction }}
                             </h6>
                             <h6>Confidence: 
